// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module-string-names.js [espree] format 1`] = `
"Unexpected token \\"smile\\" (1:19)
> 1 | export { smile as \\"smile\\" } from \\"./emojis.js\\";
    |                   ^
  2 | export { \\"smile\\" as smile } from \\"./emojis.js\\";
  3 | export { \\"smile\\" as \\"smile\\" } from \\"./emojis.js\\";
  4 | export { foo, bar as \\"foo\\" } from \\"./emojis.js\\";"
`;

exports[`module-string-names.js [meriyah] format 1`] = `
"[1:25]: Only a identifier can be used to indicate alias (1:25)
> 1 | export { smile as \\"smile\\" } from \\"./emojis.js\\";
    |                         ^
  2 | export { \\"smile\\" as smile } from \\"./emojis.js\\";
  3 | export { \\"smile\\" as \\"smile\\" } from \\"./emojis.js\\";
  4 | export { foo, bar as \\"foo\\" } from \\"./emojis.js\\";"
`;

exports[`module-string-names.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export { smile as "smile" } from "./emojis.js";
export { "smile" as smile } from "./emojis.js";
export { "smile" as "smile" } from "./emojis.js";
export { foo, bar as "foo" } from "./emojis.js";
export { foo, bar as "foo" };
export { "學而時習之，不亦說乎？", "吾道一以貫之。" as "忠恕。" } from "Confucius";
export * as "foo", { default as "quux" } from "module-b";
export { "smile" } from "./emojis.js";

=====================================output=====================================
export { smile as "smile" } from "./emojis.js";
export { "smile" as smile } from "./emojis.js";
export { "smile" as "smile" } from "./emojis.js";
export { foo, bar as "foo" } from "./emojis.js";
export { foo, bar as "foo" };
export {
  "學而時習之，不亦說乎？",
  "吾道一以貫之。" as "忠恕。",
} from "Confucius";
export * as "foo", { default as "quux" } from "module-b";
export { "smile" } from "./emojis.js";

================================================================================
`;
